src/main/metadata/objects/Outbound_Email__c.object
<CustomObject>
    <description>CreatedDate: 2013-06-14
CreateBy: Mouse Liu
Requirement: US-Lead-046, US-Lead-047, US-Lead-048
Description: Proxy object to store email info to sent by external system.</description>
    <fields>
        <fullName>CcAddresses__c</fullName>
        <label>CcAddresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Html_Body__c</fullName>
        <label>Html Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TargetObjectId__c</fullName>
        <description>CreatedDate: 2013-06-14 
CreateBy: Mouse Liu 
Requirement: US-Lead-046, US-Lead-047, US-Lead-048 
Description: Store the record Id of related record, for example, lead</description>
        <label>TargetObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <label>ToAddresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Outbound Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CcAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Sent</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>区域</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alpha_Review</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CcAddresses__c</columns>
        <columns>Html_Body__c</columns>
        <columns>Text_Body__c</columns>
        <columns>Status__c</columns>
        <columns>TargetObjectId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TargetObjectId__c</field>
            <operation>startsWith</operation>
            <value>001O000000DyxQ3</value>
        </filters>
        <label>北京之星 - Alpha Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Monthly_Lead_Email_Esclation</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CcAddresses__c</columns>
        <columns>Html_Body__c</columns>
        <columns>Text_Body__c</columns>
        <columns>Status__c</columns>
        <columns>TargetObjectId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>Dealer Monthly</value>
        </filters>
        <label>Monthly Lead Email Esclation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Weekly_Lead_Email_Esclation</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CcAddresses__c</columns>
        <columns>Html_Body__c</columns>
        <columns>Text_Body__c</columns>
        <columns>Status__c</columns>
        <columns>TargetObjectId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>Dealer Weekly</value>
        </filters>
        <label>Weekly Lead Email Esclation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OE-{0000000000}</displayFormat>
        <label>Outbound Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>